--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+
 *{
 margin:0;
 box-sizing:border-box;
@@ -5,24 +9,26 @@ padding:0;
 }
 
 body{
-    background-color: #444;
-    color: white;
+    background-color: #EBDEF0;
+    color: #1C2833;
     min-height: 100vp;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: sans-serif;
+   
 }
 
 h1{
     margin-bottom: 2rem;
     font-size: 2rem;
+    font-family: 'Anton', sans-serif;
 
 }
 
 h2{
 margin-bottom: 2rem;
+font-family: 'Anton', sans-serif;
 
 }
 .tareas{
@@ -31,7 +37,7 @@ margin-bottom: 2rem;
 
 .tareas__link{
     text-decoration: none;
-    color: yellowgreen;
-    font-family: sans-serif;
+    color: #4527A0;
+    font-family: 'Roboto', sans-serif;
 }
 
